slurm-5120407.out
  File "/home/ws/fq0795/git/gnn_uncertainty/evaluate_models.py", line 99
    mve.fit(epochs=epochs, warmup_steps=warmup_steps, train_loader=trainloader, valid_loader=validloader, device=device, dtype=torch.float32, use_wandb=use_wandb, patience=patience, model_path=model_path, force_weight=force_weight, energy_weight=energy_weight, warmup_steps=1000)
                                                                                                                                                                                                                                                                     ^^^^^^^^^^^^^^^^^
SyntaxError: keyword argument repeated: warmup_steps
